# rust-crafted

./: Cargo.toml
.zed/: debug.json  tasks.json
src/: lib.rs
src/client/: camera.rs  main.rs
src/client/render/: chunk_animation.rs  chunk_meshing.rs  mod.rs
src/client/render/shaders/: chunk_material.rs  mesh.rs  mod.rs
src/client/systems/: mod.rs  player.rs  sky.rs
src/common/: error.rs  logging.rs  mod.rs  sdf.rs
src/common/components/: mod.rs  player.rs
src/common/generation/: common.rs  mod.rs  noise.rs
src/common/generation/biomes/: layered.rs  mod.rs  plains.rs
src/common/network/: mod.rs  protocol.rs  server.rs
src/common/storage/: buffer.rs  chunk_map.rs  mod.rs
src/common/world/: block.rs  chunk.rs  material.rs  mod.rs  position.rs  terrain.rs
src/common/world/blocks/: bedrock.rs  dirt.rs  grass.rs  leaves.rs  mod.rs  stone.rs  water.rs  wood.rs
src/server/: main.rs
src/server/world/: chunk.rs  mod.rs  player.rs
