[package]
name = "rust-crafted"
version = "0.1.0"
edition = "2021"
authors = ["Asfhen"]
description = "A voxel-based sandbox game using Bevy and Renet"
license = "GPL-3.0-or-later"
repository = "https://github.com/Asfhen/rust-crafted"
homepage = "https://github.com/Asfhen/rust-crafted"
readme = "README.md"
categories = ["games"]
keywords = ["game", "voxel", "sandbox", "bevy", "renet"]

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "thin"

# for Linux
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# for Windows
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"

[dependencies]
bevy = { version = "0.15.2", features = ["dynamic_linking"] }
bevy_renet = { version = "1.0.0", features = ["steam", "netcode"] }
bincode = "1.3.3"
renet = "1.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.89"