[package]
name = "rust-crafted"
version = "0.1.0"
edition = "2021"
authors = ["Asfhen"]
description = "A voxel-based sandbox game using Bevy and Renet"
license = "GPL-3.0-or-later"
repository = "https://github.com/Asfhen/rust-crafted"
homepage = "https://github.com/Asfhen/rust-crafted"
readme = "README.md"
categories = ["games"]
keywords = ["game", "voxel", "sandbox", "bevy", "renet"]

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[lib]
name = "voxel_engine"
path = "src/lib.rs"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "thin"

# for Linux
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = [
    "-C",
    "link-arg=-fuse-ld=lld",
    "-C",
    "target-cpu=native",
    "-C",
    "target-feature=+crt-static",
]

# for Windows
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"

[dependencies]
bevy = { version = "0.16.1", features = ["trace", "bevy_remote", "multi_threaded"] }
bevy_egui = "0.35.1"
bevy_rapier3d = "0.30.0"
bevy_renet = { version = "1.0.0", features = ["steam", "netcode"] }
bevy_screen_diagnostics = "0.8.1"
bincode = "2.0.1"
bitflags = "2.9.1"
block-mesh = "0.2.0"
chrono = "0.4.39"
config = "0.15.8"
futures-lite = "2.6.0"
ilattice = { version = "0.4.0", features = ["morton-encoding"] }
libnoise = { version = "1.1.2", features = ["image", "dev-tools"] }
ndcopy = "0.3.0"
ndshape = "0.3.0"
noise-functions = "0.8.1"
rand_chacha = "0.9.0"
renet = "1.0.0"
rlua = "0.20.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["registry", "fmt"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(egui_dock_gizmo)'] }
